--- a/RailwayReservationMVC/Views/Home/SignUp.cshtml
+++ b/RailwayReservationMVC/Views/Home/SignUp.cshtml
@@ -1,92 +1,68 @@
 ﻿@model RailwayReservationMVC.Models.User
 
-@{
-    ViewBag.Title = "SignUp";
-}
-
-<body >
-
-
-    <h2>SignUp Form </h2>
-
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-horizontal">
-
-            
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.Role, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Role, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
-                </div>
-            </div>
-        </div>
-    }
-
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Signup</title>
+    <link href="~/Content/SignUp.css" rel="stylesheet" />
+</head>
+<body>
     <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+        @using (Html.BeginForm("SignUp", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+           <div class="border" style=" text-align:center">
+               <h2>Sign Up</h2>
+               <p>Please fill in this form to create an account!</p>
+               <hr>
+               <div class="form-group">
+                   
+                       @Html.DisplayNameFor(model => model.FirstName)
+                       @Html.TextBoxFor(model => model.FirstName)<br />
+                   
+               </div>
+               <div class="form-group col-12 mt-3 w-auto">
+                   
+                       @Html.DisplayNameFor(model => model.LastName)
+                       @Html.TextBoxFor(model => model.LastName)<br />
+                    
+               </div>
+               <div class="form-group col-12 mt-3 w-auto">
+
+                   @Html.DisplayNameFor(model => model.Gender)&nbsp&nbsp&nbsp&nbsp
+                   @Html.TextBoxFor(model => model.Gender)<br />
+
+               </div>
+               <div class="form-group  col-12 mt-3 w-auto">
+
+                   @Html.DisplayNameFor(model => model.Email)&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+
+                   @Html.TextBoxFor(model => model.Email)
+
+               </div>
+                  <div class="form-group  col-12 mt-3 col-xs-7">
+
+                      @Html.DisplayNameFor(model => model.Password)
+                      @Html.TextBoxFor(model => model.Password)
+
+                  </div>
+                  <div class="form-group col-12 mt-3 col-xs-4 ">
+
+                      @Html.DisplayNameFor(model => model.Role)&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                      @Html.TextBoxFor(model => model.Role)<br />
+
+                  </div>
+                   <div class="form-group col-12 mt-3">
+                        <button type="submit" class="btn btn-primary btn-sm">Sign Up</button>
+                    </div>
+                   
+                    <div class="hint-text">Already have an account? <a href="~/Home/LogIn">Login here</a></div>
+           </div>
+               
+               
+           
+
+        }
 
 </body>
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+</html>
+
+
