--- a/RailwayReservationMVC/Views/Home/AdminLogin.cshtml
+++ b/RailwayReservationMVC/Views/Home/AdminLogin.cshtml
@@ -1,52 +1,51 @@
 ﻿@model RailwayReservationMVC.Models.User
 
-@{
-    ViewBag.Title = "AdminLogin";
-}
 
-<h2>AdminLogin</h2>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+    <title>SignUp</title>
+</head>
+<body>
+    <form action="SignUp" method="post" style="background-color:aliceblue">
+        <div class="border" style=" text-align:center">
+            <h2>Sign Up</h2>
+            <p>Please fill in this form to create an account!</p>
+            <hr>
 
-    <div class="form-horizontal">
-        <h4>User</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-group  col-12 mt-3 w-auto">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DisplayNameFor(model => model.Email)&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                @Html.TextBoxFor(model => model.Email)
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+            <div class="form-group  col-12 mt-3 col-xs-7">
+                @Html.DisplayNameFor(model => model.Password)
+                @Html.PasswordFor(model => model.Password)
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Role, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Role, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+            <div class="form-group  col-12 mt-3 col-xs-7">
+                @Html.DisplayNameFor(model => model.Role)&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                @Html.PasswordFor(model => model.Role)
                 @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
             </div>
-        </div>
-    </div>
-}
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+            <div class="form-group col-12 mt-3">
+                <button type="submit" class="btn btn-primary btn-sm">Sign Up</button>
+            </div>
+
+
+
+            <div class="hint-text">Not a Registered Admin? <a href="~/Home/SignUp">SignUp here</a></div>
+        </div>
+    </form>
+
+
+
+
+</body>
+</html>
+
