--- a/RailwayReservationMVC/Views/Home/AdminLogin.cshtml
+++ b/RailwayReservationMVC/Views/Home/AdminLogin.cshtml
@@ -7,39 +7,39 @@
     <title>SignUp</title>
 </head>
 <body>
-    <form action="SignUp" method="post" style="background-color:aliceblue">
+    <form action="AdminLogin" method="post" style="background-color:aliceblue">
         <div class="border" style=" text-align:center">
-            <h2>Sign Up</h2>
-            <p>Please fill in this form to create an account!</p>
+            <h2>Login</h2>
+            
             <hr>
 
             <div class="form-group  col-12 mt-3 w-auto">
 
                 @Html.DisplayNameFor(model => model.Email)&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                @Html.TextBoxFor(model => model.Email)
+                @Html.TextBoxFor(model => model.Email)<br/>
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
 
             </div>
             <div class="form-group  col-12 mt-3 col-xs-7">
                 @Html.DisplayNameFor(model => model.Password)
-                @Html.PasswordFor(model => model.Password)
+                @Html.PasswordFor(model => model.Password)<br/>
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
 
             </div>
             <div class="form-group  col-12 mt-3 col-xs-7">
                 @Html.DisplayNameFor(model => model.Role)&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-                @Html.PasswordFor(model => model.Role)
+                @Html.PasswordFor(model => model.Role)<br/>
                 @Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger" })
 
             </div>
 
             <div class="form-group col-12 mt-3">
-                <button type="submit" class="btn btn-primary btn-sm">Sign Up</button>
+                <button type="submit" class="btn btn-primary btn-sm">Login</button>
             </div>
 
 
 
-            <div class="hint-text">Not a Registered Admin? <a href="~/Home/SignUp">SignUp here</a></div>
+            
         </div>
     </form>
 
