--- a/RailwayReservationMVC/Views/Home/Homepage.cshtml
+++ b/RailwayReservationMVC/Views/Home/Homepage.cshtml
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <!--Navbar for Homepage-->
+    <!--navbar showing all options-->
     <nav class="navbar navbar-expand-lg bg-info fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">RailYatri</a>
@@ -29,11 +29,20 @@
                         <a class="nav-link" href="~/Home/SignUp">SignUp</a>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="~/Home/ Logout">LogOut</a>
+                    </li>
+
                 </ul>
 
             </div>
         </div>
     </nav>
+
+    <br/>
+    <br/>
+    <br/>
+
 
     <!--Search Trains-->
     @using (Html.BeginForm("Homepage", "Home", FormMethod.Post))
@@ -44,7 +53,7 @@
     <table class="table table-striped">
         <thead>
             <tr>
-               
+
                 <th>Train Name</th>
                 <th>Departure</th>
                 <th>Destination</th>
@@ -68,7 +77,7 @@
                 foreach (var item in Model)
                 {
                     <tr>
-                       
+
                         <td>@item.TrainName</td>
                         <td>@item.SourceStation</td>
                         <td>@item.DestinationStation</td>
