--- a/RailwayReservationMVC/Views/Home/Homepage.cshtml
+++ b/RailwayReservationMVC/Views/Home/Homepage.cshtml
@@ -30,7 +30,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="~/Home/ Logout">LogOut</a>
+                        <a class="nav-link" href="~/Home/Logout">LogOut</a>
                     </li>
 
                 </ul>
@@ -94,5 +94,88 @@
         </tbody>
     </table>
 
+ 
+  <!-- Footer -->
+  <!--<footer
+          class="text-center text-lg-start text-dark"
+          style="background-color: #ECEFF1"
+          
+          >-->
+    <!-- Section: Social media -->
+    <!--<section
+             class="d-flex justify-content-between p-2 text-white"
+             style="background-color: #21D192"
+             >-->
+      <!-- Left -->
+      <!--<div class="me-1">
+        <span>Get connected with us on social networks:</span>
+      </div>-->
+      
+      <!-- Right -->
+    <!--</section>-->
+    <!-- Section: Social media -->
 
-</html>
+    <!-- Section: Links  -->
+    <!--<section class="">
+      <div class="container text-center text-md-start mt-5">-->
+        <!-- Grid row -->
+        <!--<div class="row mt-3">-->
+          <!-- Grid column -->
+          <!--<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">-->
+            <!-- Content -->
+            <!--<h6 class="text-uppercase fw-bold">RailYatri</h6>
+            <hr
+                class="mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 60px; background-color: #7c4dff; height: 2px"
+                />
+            <p>
+             Plan your joourney with Railyatri.
+            </p>
+          </div>-->
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <!--<div class="col-md-2 col-lg-2 col-xl-2 ">-->
+              <!-- Links -->
+              <!--<h6 class="text-uppercase fw-bold">Developers</h6>
+              <hr class="mb-4 mt-0 d-inline-block mx-auto"
+                  style="width: 60px; background-color: #7c4dff; height: 2px" />
+              <p>
+                  <a href="https://github.com/akshbedarkar" class="text-dark">Akshata Bedarkar</a>
+              </p>
+              <p>
+                  <a href="https://github.com/ariba0611" class="text-dark">Ariba Siddique</a>
+              </p>
+              <p>
+                  <a href="https://github.com/KajalShinde123" class="text-dark">Kajal Sinde</a>
+              </p>
+              <p>
+                  <a href="#!" class="text-dark">Nidhi Sharma</a>
+              </p>
+              <p>
+                  <a href="https://github.com/Rutuja-s-jadhav" class="text-dark">Rutuja Jadhav</a>
+              </p>
+          </div>-->
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <!--<div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">-->
+            <!-- Links -->
+            <!--<h6 class="text-uppercase fw-bold">Useful links</h6>
+            <hr
+                class="mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 60px; background-color: #7c4dff; height: 2px"
+                />
+            <p>
+              <a href="Login" class="text-dark">Your Account</a>
+            </p>
+            
+          </div>
+        </div>
+       
+      </div>
+    </section>
+ 
+  </footer>
+  
+</html>-->
