--- a/RailwayReservationMVC/Views/Payment/PaymentPage.cshtml
+++ b/RailwayReservationMVC/Views/Payment/PaymentPage.cshtml
@@ -27,7 +27,7 @@ var options = {
         "address": "@Html.DisplayFor(model => model.address)"
     },
     "theme": {
-        "color": "#F37254"
+        "color": "#d0f7f7"
     }
 };
 var rzp1 = new Razorpay(options);
