--- a/RailwayReservationMVC/Views/Res/Index.cshtml
+++ b/RailwayReservationMVC/Views/Res/Index.cshtml
@@ -1,61 +1,162 @@
 ﻿@model  RailwayReservationMVC.Models.Reservation
-<html>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<!doctype html>
+<html lang="en">
 <head>
-    <style>
-        .b1 {
-            background-color: cadetblue;
-            border: none;
-            color: black;
-            padding: 5px 10px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 18px;
-            border-radius: 5px;
-        }
-    </style>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Fonts -->
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
+
+
+
+    <link rel="icon" href="Favicon.png">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <title>Laravel</title>
 </head>
-<body>
-
-    @using (Html.BeginForm())
-    {
-
-        @Html.LabelFor(model => model.Res_Name, "Name", new { @class = "font-weight-bold" })
-        @Html.TextBoxFor(model => model.Res_Name, new { @class = "form-control" })<br />
-
-        @Html.LabelFor(model => model.Res_Gender, "Gender", new { @class = "font-weight-bold" })
-        @Html.TextBoxFor(model => model.Res_Gender, new { @class = "form-control" })<br />
-
-        @Html.LabelFor(model => model.TrainDetails.SourceStation, "Source Station", new { @class = "font-weight-bold" })
-        @Html.DropDownListFor(model => model.TrainDetails.SourceStation, ViewData["TrainDetailS"] as IEnumerable<SelectListItem>, "Select Source Station", new { @class = "form-control" })<br />
-
-
-        @Html.LabelFor(model => model.TrainDetails.DestinationStation, "Destination Station", new { @class = "font-weight-bold" })
-        @Html.DropDownListFor(model => model.TrainDetails.DestinationStation, ViewData["TrainDetailDesti"] as IEnumerable<SelectListItem>, "Select Destination Station", new { @class = "form-control" })<br />
-
-        @Html.LabelFor(model => model.QuotaType, "Select Quota", new { @class = "font-weight-bold" })
-
-        @Html.DropDownListFor(model => model.QuotaType, new SelectList(new[] { "General Quota", "Ladies Quota" }), "", new { @class = "form-control" })<br />
-
-        @Html.LabelFor(model => model.Seat_No, "Number of Passenger", new { @class = "font-weight-bold" })
-
-        @Html.DropDownListFor(model => model.Seat_No, new SelectList(new[] { 1, 2, 3, 4, 5, 6 }), "Select Seats", new { @class = "form-control" })<br />
-
-        @Html.LabelFor(model => model.Res_Date, "Select Date", new { @class = "font-weight-bold" })<br />
-
-
-        <input type = "date" name = "Res_Date" value = "DateTime.Now()" min = "2022-12-20" />
-        
-        <input type="Submit" name="Check Details" , class="b1" value="Book Ticket" />
-
-        @*@Html.ActionLink("Book Ticket", "Index", "Payment", "", new { @class = "b1" });*@
-
-
+<style>
+    body {
+        margin: 0;
+        font-size: .9rem;
+        font-weight: 400;
+        line-height: 1.6;
+        color: #212529;
+        text-align: left;
+        background-color: #f5f8fa;
     }
 
+    .navbar-laravel {
+        box-shadow: 0 2px 4px rgba(0,0,0,.04);
+    }
+
+    .navbar-brand, .nav-link, .my-form, .login-form {
+        font-family: Raleway, sans-serif;
+    }
+
+    .my-form {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
+
+        .my-form .row {
+            margin-left: 0;
+            margin-right: 0;
+        }
+
+    .login-form {
+        padding-top: 1.5rem;
+        padding-bottom: 1.5rem;
+    }
+
+        .login-form .row {
+            margin-left: 0;
+            margin-right: 0;
+        }
+</style>
+<body>
+
+@*<nav class="navbar navbar-expand-lg navbar-light navbar-laravel">
+    <div class="container">
+    <a class="navbar-brand" href="#">Laravel</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Login</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Register</a>
+            </li>
+        </ul>
+
+    </div>
+    </div>
+</nav>*@
+
+<main class="my-form">
+    <div class="cotainer">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                    <div class="card">
+                        <div class="card-header">Register</div>
+                        <div class="card-body">
+                            @using (Html.BeginForm())
+                            {
+                                <div class="form-group row">
+                                    @Html.LabelFor(model => model.Res_Name, "Name", new { @class = "font-weight-bold" })
+                                    <div class="col-md-6">
+                                        @Html.TextBoxFor(model => model.Res_Name, new { @class = "form-control" })
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    @Html.LabelFor(model => model.Res_Gender, "Gender", new { @class = "font-weight-bold" })
+                                    <div class="col-md-6">
+                                        @Html.TextBoxFor(model => model.Res_Gender, new { @class = "form-control" })<br />
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    @Html.LabelFor(model => model.TrainDetails.SourceStation, "Source Station", new { @class = "font-weight-bold" })
+                                    <div class="col-md-6">
+                                        @Html.DropDownListFor(model => model.TrainDetails.SourceStation, ViewData["TrainDetailS"] as IEnumerable<SelectListItem>, "Select Source Station", new { @class = "form-control" })<br />
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    @Html.LabelFor(model => model.TrainDetails.DestinationStation, "Destination Station", new { @class = "font-weight-bold" })
+                                    <div class="col-md-6">
+                                        @Html.DropDownListFor(model => model.TrainDetails.DestinationStation, ViewData["TrainDetailDesti"] as IEnumerable<SelectListItem>, "Select Destination Station", new { @class = "form-control" })<br />
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    @Html.LabelFor(model => model.QuotaType, "Select Quota", new { @class = "font-weight-bold" })
+                                    <div class="col-md-6">
+                                        @Html.DropDownListFor(model => model.QuotaType, new SelectList(new[] { "General Quota", "Ladies Quota" }), "", new { @class = "form-control" })<br />
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    @Html.LabelFor(model => model.Seat_No, "Number of Passenger", new { @class = "font-weight-bold" })
+                                    <div class="col-md-6">
+                                        @Html.DropDownListFor(model => model.Seat_No, new SelectList(new[] { 1, 2, 3, 4, 5, 6 }), "Select Seats", new { @class = "form-control" })<br />
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    @Html.LabelFor(model => model.Res_Date, "Select Date", new { @class = "font-weight-bold" })<br />
+                                    <div class="col-md-6">
+                                        <input type="date" name="Res_Date" value="DateTime.Now()" min="2022-12-20" />
+                                    </div>
+                                </div>
 
 
+                                <div class="col-md-6 offset-md-4">
+                                    <input type="Submit" name="Check Details" , class="btn btn-primary" value="Book Ticket" />
+                                </div>
+                                @Html.ActionLink("Back", "afterlogin", "Home", "", new { @class = "btn btn-primary" })
+
+                            }
+
+</main>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
 </html>
 
