--- a/RailwayReservationMVC/Views/Home/afterlogin.cshtml
+++ b/RailwayReservationMVC/Views/Home/afterlogin.cshtml
@@ -1,9 +1,4 @@
 ﻿
-@{
-    ViewBag.Title = "Welcome User !";
-}
-
-
 <style>
     body {
         background-image: url('https://cdn.pixabay.com/photo/2018/02/21/10/16/train-station-3169964_1280.jpg');
@@ -16,6 +11,18 @@
         margin: auto;
     }
 </style>
+
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+    @TempData["Message"]
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 
 <!-- Background image -->
 <div class="bg-image d-flex justify-content-center align-items-center">
@@ -34,7 +41,7 @@
             <div class="col-mt-2">
                 <h5 class="card-title">Reservation</h5>
                 <p class="card-text">Book Train Tickets</p>
-                 @Html.ActionLink("Book Ticket", "Index", "Res", "", new { @class = "btn btn-primary" })
+                @Html.ActionLink("Book Ticket", "Index", "Res", "", new { @class = "btn btn-primary" })
             </div>
         </div>
     </div>
@@ -45,7 +52,7 @@
                 <h5 class="card-title">Cancel Ticket!</h5>
                 <p class="card-text">Enter your PNR number !</p>
                 @*<a href="homepage" class="btn btn-primary">Cancel Ticket!</a>*@
-                @Html.ActionLink("Cancel Ticket","CancelPNR","Res","",new { @class="btn btn-primary"})
+                @Html.ActionLink("Cancel Ticket", "CancelPNR", "Res", "", new { @class = "btn btn-primary" })
             </div>
         </div>
     </div>
@@ -53,9 +60,7 @@
 </div>
 
 
-<h6>
 
-    @TempData["Message"]
-</h6>
+
 
 
