--- a/RailwayReservationMVC/Views/Payment/Failed.cshtml
+++ b/RailwayReservationMVC/Views/Payment/Failed.cshtml
@@ -15,7 +15,7 @@
     }
 
     .payment_header {
-        background: rgba(255,102,0,1);
+        background: #d0f7f7;
         padding: 20px;
         border-radius: 20px 20px 0px 0px;
     }
