--- a/RailwayReservationMVC/Views/Payment/Index.cshtml
+++ b/RailwayReservationMVC/Views/Payment/Index.cshtml
@@ -1,10 +1,5 @@
 ﻿@model  RailwayReservationMVC.Models.OrderModel
 
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
 
 <html>
 <head>
@@ -15,7 +10,7 @@
 
     <link href="~/css/style.css" rel="stylesheet" />
 </head>
-<body>
+<body style="background-color:aliceblue;">
     <div class="container login-container">
         <div class="login-card">
             <div class="login-card-body">
