--- a/RailwayReservationMVC/Views/Payment/Success.cshtml
+++ b/RailwayReservationMVC/Views/Payment/Success.cshtml
@@ -15,7 +15,7 @@
     }
 
     .payment_header {
-        background: rgba(255,102,0,1);
+        background: #d0f7f7;
         padding: 20px;
         border-radius: 20px 20px 0px 0px;
     }
@@ -69,12 +69,12 @@
                     </div>
                     <div class="content">
                         <h1>Payment Success !</h1>
-                        <p>Passenger Name: @Session["ResName"]</p>
-                        <p> Source Station:@Session["SourceStation"]</p>
-                        <p> Transaction ID:@Session["transactionId"]</p>
-                        <p> Destination Station :@Session["DestinationStation"]</p>
-                        <p> PNR Number : @Session["PNR"]</p><br />
-                        <p> SEAT NUMBER : @Session["seatno"]</p><br />
+                        <strong>Passenger Name: @Session["ResName"]</strong><br/>
+                        <strong> Source Station:@Session["SourceStation"]</strong><br />
+                        <strong> Transaction ID:@Session["transactionId"]</strong><br />
+                        <strong> Destination Station :@Session["DestinationStation"]</strong><br />
+                        <strong> PNR Number : @Session["PNR"]</strong><br />
+                        <strong> SEAT NUMBER : @Session["seatno"]</strong><br />
 
                     </div>
 
