--- a/RailwayReservationMVC/Views/Res/CancelPNR.cshtml
+++ b/RailwayReservationMVC/Views/Res/CancelPNR.cshtml
@@ -1,7 +1,11 @@
 ﻿@model RailwayReservationMVC.Models.Reservation
 
+
+@Html.ActionLink("Back", "afterlogin", "Home", "", new { @class = "btn btn-primary" })
+
+
 <h2>CancelPNR</h2>
-@using (Html.BeginForm("CancelPNR","Res",FormMethod.Post))
+@using (Html.BeginForm("CancelPNR", "Res", FormMethod.Post))
 {
     @Html.DisplayNameFor(model => model.PNR_NO)
     @Html.TextBoxFor(model => model.PNR_NO)
