--- a/RailwayReservationMVC/Views/Home/afterlogin.cshtml
+++ b/RailwayReservationMVC/Views/Home/afterlogin.cshtml
@@ -51,8 +51,8 @@
             <div class="col-mt-2">
                 <h5 class="card-title">Cancel Ticket!</h5>
                 <p class="card-text">Enter your PNR number !</p>
-                @*<a href="homepage" class="btn btn-primary">Cancel Ticket!</a>*@
-                @Html.ActionLink("Cancel Ticket", "CancelPNR", "Res", "", new { @class = "btn btn-primary" })
+                
+                @Html.ActionLink("Cancel Ticket", "CancelTicket", "Res", "", new { @class = "btn btn-primary" })
             </div>
         </div>
     </div>
