--- a/RailwayReservationMVC/Views/Home/Homepage.cshtml
+++ b/RailwayReservationMVC/Views/Home/Homepage.cshtml
@@ -8,7 +8,7 @@
 <body>
 
     <!--navbar showing all options-->
-    <nav class="navbar navbar-expand-lg bg-info fixed-top">
+    <!--<nav class="navbar navbar-expand-lg bg-info fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">RailYatri</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
 
     <br/>
     <br/>
-    <br/>
+    <br/>-->
 
 
     <!--Search Trains-->
