--- a/RailwayReservationMVC/Views/Res/CancelTicket.cshtml
+++ b/RailwayReservationMVC/Views/Res/CancelTicket.cshtml
@@ -1,17 +1,14 @@
 ﻿@model RailwayReservationMVC.Models.Reservation
 
 
-@Html.ActionLink("Back", "afterlogin", "Home", "", new { @class = "btn btn-primary" })
-
-
-<h2>CancelPNR</h2>
-@using (Html.BeginForm("CancelPNR", "Res", FormMethod.Post))
+@using (Html.BeginForm("CancelTicket", "Res", FormMethod.Post))
 {
+
     @Html.DisplayNameFor(model => model.PNR_NO)
     @Html.TextBoxFor(model => model.PNR_NO)
 
     <button type="submit" name="Cancel">Cancel</button>
 
-}
 
+}
 
